index:struttura base + reset css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- blocco header con 2 contenitori -->
+    <header>
+
+    </header>
+    <!-- /blocco header con 2 contenitori -->
+
+    <!-- blocco main con 3 contenitori di cui 2 float -->
+    <main>
+
+    </main>
+    <!-- /blocco main con 3 contenitori di cui 2 float -->
     
+    <!-- footer -->
+    <footer>
+        
+    </footer>
+    <!-- /footer -->
+
 </body>
 </html>
