index:struttura header

--- a/index.html
+++ b/index.html
@@ -6,25 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Struttura WordPress</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/logoboolean.png" type="image/x-icon">
 </head>
 <body>
-    <!-- blocco header con 2 contenitori -->
-    <header>
+    <!-- div contenitore -->
+    <div class="layout debug">
+         <!-- blocco header con 2 contenitori -->
+        <header>
+            <div class="logo-nav">
 
-    </header>
-    <!-- /blocco header con 2 contenitori -->
+            </div>
+            <div class="header-text">
 
-    <!-- blocco main con 3 contenitori di cui 2 float -->
-    <main>
+            </div>
+        </header>
+        <!-- /blocco header con 2 contenitori -->
 
-    </main>
-    <!-- /blocco main con 3 contenitori di cui 2 float -->
-    
-    <!-- footer -->
-    <footer>
+        <!-- blocco main con 4 contenitori di cui 2 float -->
+        <main>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </main>
+        <!-- /blocco main con 4 contenitori di cui 2 float -->
         
-    </footer>
-    <!-- /footer -->
+        <!-- footer -->
+        <footer>
+            <div>
 
+            </div>
+        </footer>
+        <!-- /footer -->
+    </div>
 </body>
 </html>
