--- a/index.html
+++ b/index.html
@@ -14,27 +14,21 @@
          <!-- blocco header con 2 contenitori -->
         <header>
             <div class="logo-nav">
-
             </div>
             <div class="header-text">
-
             </div>
         </header>
         <!-- /blocco header con 2 contenitori -->
 
         <!-- blocco main con 4 contenitori di cui 2 float -->
-        <main>
-            <div>
-
+        <main class="clearfix">
+            <div class="main-title">
             </div>
-            <div>
-
+            <div class="box left">
             </div>
-            <div>
-
+            <div class="main-text">
             </div>
-            <div>
-
+            <div class="box right">
             </div>
         </main>
         <!-- /blocco main con 4 contenitori di cui 2 float -->
@@ -42,7 +36,6 @@
         <!-- footer -->
         <footer>
             <div>
-
             </div>
         </footer>
         <!-- /footer -->
