index: INIZIO TRASFORMAZIONE

--- a/index.html
+++ b/index.html
@@ -14,8 +14,30 @@
          <!-- blocco header con 2 contenitori -->
         <header>
             <div class="logo-nav">
+                <div class="logo">
+                    <img src="./img/logo.png" alt="logo-neori">
+                </div>
+                <nav>
+                    <ul>
+                        <li>FEATURES</li>
+                        <li>EDITORIALS</li>
+                        <li>ENVIRONMENT</li>
+                        <li>BLOG</li>
+                        <li>SHOP</li>
+                        <li>CONTACT</li>
+                    </ul>
+                </nav>
             </div>
-            <div class="header-text">
+            <div class="header-box">
+               <div class="header-text">
+                    <span class="header-title">Pretium ac placerat dui interdum nunc <br>
+                    in eros urna morbi
+                    </span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur alias dolorum aperiam excepturi, rerum asperiores harum omnis officia et provident repudiandae nihil?
+                    </p>
+            </div>
+                
+                 
             </div>
         </header>
         <!-- /blocco header con 2 contenitori -->
