index:layout completo

--- a/index.html
+++ b/index.html
@@ -45,20 +45,41 @@
         <!-- blocco main con 4 contenitori di cui 2 float -->
         <main class="clearfix">
             <div class="main-title">
+                <h1>Leadership</h1>
+                <span>Fertenum urna a libero tempus</span>
             </div>
             <div class="box left">
+                <div class="img side-left">
+                </div>
+                <div class="box-text">
+                    <h5>Lorem</h5>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum nobis eos nisi ducimus eius quisquam officia alias quidem possimus illum assumenda, reiciendis, perferendis accusamus dolor quae modi blanditiis,neque.</span>
+                </div>
+                
             </div>
             <div class="main-text">
+                <div class="img side-center">
+                </div>
+                <div class="box-text">
+                    <h5>Lorem</h5>
+                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur debitis aspernatur provident saepe assumenda deserunt quidem, sequi quia, corporis perferendis vero. Quibusdam exercitationem magnam minus quam numquam voluptas repellat? Quam aspernatur molestias similique aut numquam eaque fugiat ipsum dolorem alias perspiciatis inventore repudiandae vero fuga voluptate, earum corrupti. Officia, quia modi! Adipisci quam, unde culpa dolore maxime dolorem id quidem officiis architecto repellendus nobis, quae iste laboriosam officia! Veritatis quasi nisi cumque rerum veniam quo illo iste repudiandae dolorem dolorum, neque dolores pariatur error corrupti ipsa tempora possimus, nobis laboriosam exercitationem eligendi accusamus atque. Ducimus nihil hic possimus velit dolore.</span>
+                </div>
             </div>
             <div class="box right">
+                <div class="img side-right">
+                </div>
+                <div class="box-text">
+                    <h5>Lorem</h5>
+                    <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum nobis eos nisi ducimus eius quisquam officia alias quidem possimus illum assumenda, reiciendis, perferendis accusamus dolor quae modi blanditiis,neque.</span>
+                </div>
             </div>
         </main>
         <!-- /blocco main con 4 contenitori di cui 2 float -->
         
         <!-- footer -->
         <footer>
-            <div>
-            </div>
+            <span>Designed with <span id="heart">&hearts;
+            </span>
         </footer>
         <!-- /footer -->
     </div>
