index:font e correzioni

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Struttura WordPress</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/logoboolean.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- div contenitore -->
-    <div class="layout debug">
+    <div class="layout">
          <!-- blocco header con 2 contenitori -->
         <header>
             <div class="logo-nav">
@@ -62,7 +63,7 @@
                 </div>
                 <div class="box-text">
                     <h5>Lorem</h5>
-                    <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur debitis aspernatur provident saepe assumenda deserunt quidem, sequi quia, corporis perferendis vero. Quibusdam exercitationem magnam minus quam numquam voluptas repellat? Quam aspernatur molestias similique aut numquam eaque fugiat ipsum dolorem alias perspiciatis inventore repudiandae vero fuga voluptate, earum corrupti. Officia, quia modi! Adipisci quam, unde culpa dolore maxime dolorem id quidem officiis architecto repellendus nobis, quae iste laboriosam officia! Veritatis quasi nisi cumque rerum veniam quo illo iste repudiandae dolorem dolorum, neque dolores pariatur error corrupti ipsa tempora possimus, nobis laboriosam exercitationem eligendi accusamus atque. Ducimus nihil hic possimus velit dolore.</span>
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores libero dolor rerum velit molestiae quae quaerat itaque cum distinctio omnis recusandae explicabo praesentium, odit quasi maxime iusto ipsam nisi qui, iste mollitia placeat laboriosam. Consequatur animi corporis tempora reiciendis? Ducimus eius earum voluptate cumque, natus, expedita excepturi, sequi ad delectus blanditiis eos maiores autem mollitia tempore explicabo numquam magni fugit error. Exercitationem deserunt beatae quidem nihil vero fugit obcaecati dolores voluptates consectetur a repellendus tempora eos iure quas delectus, quisquam velit itaque porro perferendis voluptatum eum nulla doloremque ea. Incidunt aut ipsam unde, tenetur perferendis animi cum eveniet amet, eos natus expedita laudantium? Sunt vel dolorum repellat quibusdam modi optio quos nostrum impedit cum iste quasi, magni debitis voluptatem ullam in hic veniam. Libero facilis consequuntur rem eius et iste, nobis officia ullam commodi quod blanditiis odit, consectetur voluptatibus harum ex! Iste </span>
                 </div>
             </div>
             <div class="box right">
