index:piccole modifiche

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     <img src="./img/logo.png" alt="logo-neori">
                 </div>
                 <nav>
-                    <ul>
-                        <li>FEATURES</li>
-                        <li>EDITORIALS</li>
-                        <li>ENVIRONMENT</li>
-                        <li>BLOG</li>
-                        <li>SHOP</li>
-                        <li>CONTACT</li>
+                    <ul class="clearfix">
+                        <li>features</li>
+                        <li>editorials</li>
+                        <li>environment</li>
+                        <li>blog</li>
+                        <li>shop</li>
+                        <li>contact</li>
                     </ul>
                 </nav>
             </div>
@@ -50,7 +50,7 @@
                 <span>Fertenum urna a libero tempus</span>
             </div>
             <div class="box left">
-                <div class="img side-left">
+                <div class="img-box side-left">
                 </div>
                 <div class="box-text">
                     <h5>Lorem</h5>
@@ -59,7 +59,7 @@
                 
             </div>
             <div class="main-text">
-                <div class="img side-center">
+                <div class="img-box side-center">
                 </div>
                 <div class="box-text">
                     <h5>Lorem</h5>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="box right">
-                <div class="img side-right">
+                <div class="img-box side-right">
                 </div>
                 <div class="box-text">
                     <h5>Lorem</h5>
@@ -79,7 +79,7 @@
         
         <!-- footer -->
         <footer>
-            <span>Designed with <span id="heart">&hearts;
+            <span>Designed with <span id="heart">&hearts;</span>
             </span>
         </footer>
         <!-- /footer -->
